--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h1>Lei Chu</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="cai.png" alt="alt text" width="244.8px" height="326.4px" />&nbsp;</td>
+<img src="CHU.jpg" alt="alt text" width="244.8px" height="326.4px" />&nbsp;</td>
 <td align="left"><p>Lei Chu <br />
 <br />
 Ph.D. Candidate <br />
