--- a/overview.html
+++ b/overview.html
@@ -11,7 +11,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Yang Cai</div>
+<div class="menu-category">Lei Chu</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="education.html">About&nbsp;Me</a></div>
 <div class="menu-category">Research</div>
