--- a/education.html
+++ b/education.html
@@ -26,24 +26,71 @@
 </div>
 <h2>Education</h2>
 <ul>
-<li><p>M.S., School of Electrical and Computer Engineering, Tsinghua University, Beijing, China, Jul. 2015 - Jul. 2018
+<li><p> Ph.D, School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University (SJTU), Jul. 2012 - Dec. 2019.
 </p>
 </li>
 </ul>
 <ul>
-<li><p>B.E., College of Information Engineering, Tsinghua University, Beijing, China, Aug. 2011 - Jul. 2015
+<li><p> M.S., School of Information and Communication Engineering, University of Electronic Science and Technology of China (UESTC), Chengdu, China, Sep. 2012 - Jun. 2015
 </p>
 </li>
 </ul>
 <h2>Biography</h2>
-<p>Mr. Yang Cai received his B.E. and M.S. degrees from the Department of Electronic Engineering, Tsinghua University, in 2015 and 2018, respectively. Now he is a Ph.D. candidate in the Department of Electrical Engineering at University of Southern California, awarded the Annenberg Graduate Fellowship from 2018 to 2022. He is currently working on modeling, analysis, evaluation, and control of next-generation computing networks (e.g., distributed cloud, mobile edge, and fog computing) and services (e.g., autonomous driving, AR/MR/VR/XR, and industrial automation).
+<p>Dr. Lei Chu received his M.S. and Ph.D. degrees from UESTC and SJTU, in 2015 and 2018, respectively. Now, he has been a research associate in the Department of Electrical Engineering at the University of Southern California since Sep. 2021. As an interdisciplinary researcher, my research interests include integrating information theory
+into neural network optimization and the related Wireless Communications and Smart Sensing applications. 1) Machine Learning(ML): First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
+Network (NN); Random Matrix Theory; Theoretical NN Generalization Evaluation. 2) ML for Communications and Sensing: Semantic Localization; Directional Spectrum Sensing; 1-bit Massive MIMO;
+V2V Propagation Modeling; Channel Estimation/Prediction; V2V Resource Allocation; Joint Communication and Sensing. 3) ML for Sciences: Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
+PMU, IMU, Electroencephalogram (EEG) and Point Clouds.
+
 </p>
 <h2>Academic Services</h2>
-<p>Reviewer of the following conferences and journals: IEEE/ACM Transactions on Networking, IEEE Transactions on Industrial Electronics, IEEE Wireless Communications Letters, and IEEE Transactions on Green Communications and Networking; Globecom 2019 & 2017, ICC 2018, ISIT 2022, IEEE PIMRC 2022 & 2021, IEEE SmartGridComm 2019, WCSP 2016, EUSIPCO 2016.
+<p> He authored over fifty papers, holds several patents, and contributed to three book chapters. He regularly reviews technical papers, completing 100+ peer reviews for 20+ SCI-indexed journals, including 10+ IEEE Transactions. He received the 2015 Distinguished Master's Thesis Award, the 2020 SJTU Doctoral Excellence Award, and a 2020 International Postdoctoral Fellowship. He serves a TPC member for several conferences and an academic/associate editor for three SCI-indexed journals. He presented a tutorial at IEEE GLOBECOM 2022 and emphasizes reproducible research by sharing his code with the public.
+
+<p> Memberships 
+IEEE Senior Member, since 2022;
+IEEE Communication Society Membership;
+IEEE Vehicular Technology Society Membership;
+IEEE Computer Society Technical Community on Learning Technology;
+IEEE Vehicular Technology Society Technical Community on Connected Vehicles;
+IEEE Computer Society Special Tech Community on Reliable, Safe, Secure, and Time Deterministic Intelligent Systems.
+IEEE Computer Society Special Technical Community on Autonomous Driving Technologies; IEEE Computer Society Technical Community on Pattern Analysis and Machine Intelligence;
+IEEE Engineering in Medicine and Biology Society Technical Committee on Translational Engineering &
+Healthcare Innovations.
+  
+<p> Review Service: 
+I serve(d) as a regular reviewer with 200+ reviews for below 20+ referred international journals:
+0) IEEE Transactions on Signal Processing; 1) IEEE Transactions on Wireless Communication; 2) IEEE
+Transactions on Artificial Intelligence; 3) IEEE Wireless Communications Magazine; 4) IEEE Transactions
+on Big Data; 5) IEEE Transactions on Multimedia; 6) IEEE Transactions on Communications; 7) IEEE
+Communications Magazine; 8) IEEE Transactions on Vehicular Technology; 9) IEEE Transactions on
+Industrial Electronics; 10) IEEE Journal of Biomedical and Health Informatics; 11) IEEE Transactions
+on Instrumentation & Measurement; 12) IEEE Journal of Communications and Networks; 13) IEEE
+Intelligent Systems; 14) IEEE Wireless Communications Letters; 15) IEEE Communications Letters; 16)
+IEEE Internet of Things Journal; 17) Frontiers in Neurorobotics; 18) Knowledge-Based Systems; 19)
+Information Sciences; 20) Digital Signal Processing.
+  
+<p>  I served as a conference reviewer for top-tier venues:
+1) IEEE/RSJ International Conference on Intelligent Robots and Systems (IEEE-IROS), since 2022;
+2) IEEE International Conference on Image Processing (IEEE-ICIP), since 2022.
+3) The Annual International Conference of the IEEE Engineering in Medicine and Biology Society (IEEEEMBC), since 2024.
+
+<p>  Editorial Service
+1) Academic Editor, PLOS ONE (Impact Factor: 3.752), Since Sep. 2023.
+2) Academic Editor, IET Electrical Systems in Transportation (Impact Factor: 2.387), Since Jun. 2023.
+3) Academic Editor, Hindawi Journal of Sensors (Impact Factor: 2.55), Since Jan. 2023.
+4) Leading Guest Editor for the special issue ”When Mixed Reality Meets Smart Sensing with
+Wearables: The Pursuit for Efficiency, Interpretability, and Trustworthiness” in Applied Sciences;
+5) Associate Editor, Journal of Artificial Intelligence and Big Data, since 2022.
+6) Editorial Board Member, Modern Intelligent Times (MIT, 2957-7942), Sep.2022-Aug.2024.
+
+<p> Technical Program Committee for the peer-reviewed conferences:
+1) IEEE Annual International Conference on Network and Information Systems for Computers, 2022.
+2) The IOP International Conference on Computer Networks and Communications, 2022.
+  
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2022-06-03 09:54:44 Pacific Daylight Time.
+Last updated on 2024-05-03 09:54:44 Pacific Daylight Time.
 </div>
 </div>
 </td>
