--- a/education.html
+++ b/education.html
@@ -35,7 +35,7 @@
 </p>
 </li>
 </ul>
-<h2>Biography</h2>
+<h2>Biography and Research Interests</h2>
 <p> Dr. Lei Chu received his M.S. and Ph.D. degrees from UESTC and SJTU, in 2015 and 2018, respectively. Now, he has been a research associate in the Department of Electrical Engineering at the University of Southern California since Sep. 2021. As an interdisciplinary researcher, my research interests include integrating information theory
 into neural network optimization and the related Wireless Communications and Smart Sensing applications. 
 
@@ -52,7 +52,7 @@ PMU, IMU, Electroencephalogram (EEG) and Point Clouds.
 <h2>Academic Services</h2>
 <p> He authored over fifty papers, holds several patents, and contributed to three book chapters. He regularly reviews technical papers, completing 100+ peer reviews for 20+ SCI-indexed journals, including 10+ IEEE Transactions. He received the 2015 Distinguished Master's Thesis Award, the 2020 SJTU Doctoral Excellence Award, and a 2020 International Postdoctoral Fellowship. He serves a TPC member for several conferences and an academic/associate editor for three SCI-indexed journals. He presented a tutorial at IEEE GLOBECOM 2022 and emphasizes reproducible research by sharing his code with the public.
 
-<p> Memberships 
+<h3>Memberships</h3>  
 <p>IEEE Senior Member, since 2022;
 <p>IEEE Communication Society Membership;
 <p>IEEE Vehicular Technology Society Membership;
@@ -63,7 +63,8 @@ PMU, IMU, Electroencephalogram (EEG) and Point Clouds.
 <p>IEEE Engineering in Medicine and Biology Society Technical Committee on Translational Engineering &
 Healthcare Innovations.
   
-<p> Review Service: 
+<h3>Review Service:</h3> 
+  
 I serve(d) as a regular reviewer with 200+ reviews for below 20+ referred international journals:
 <p> 0) IEEE Transactions on Signal Processing; 1) IEEE Transactions on Wireless Communication; 2) IEEE
 Transactions on Artificial Intelligence; 3) IEEE Wireless Communications Magazine; 4) IEEE Transactions
@@ -80,7 +81,7 @@ Information Sciences; 20) Digital Signal Processing.
 <p>2) IEEE International Conference on Image Processing (IEEE-ICIP), since 2022.
 <p>3) The Annual International Conference of the IEEE Engineering in Medicine and Biology Society (IEEEEMBC), since 2024.
 
-<p>  Editorial Service
+<h3>Editorial Service:</h3>   
 <p>1) Academic Editor, PLOS ONE (Impact Factor: 3.752), Since Sep. 2023.
 <p>2) Academic Editor, IET Electrical Systems in Transportation (Impact Factor: 2.387), Since Jun. 2023.
 <p>3) Academic Editor, Hindawi Journal of Sensors (Impact Factor: 2.55), Since Jan. 2023.
