--- a/education.html
+++ b/education.html
@@ -91,8 +91,8 @@ Wearables: The Pursuit for Efficiency, Interpretability, and Trustworthiness” 
 <p>6) Editorial Board Member, Modern Intelligent Times (MIT, 2957-7942), Sep.2022-Aug.2024.
 
 <p> Technical Program Committee for the peer-reviewed conferences:
-1) IEEE Annual International Conference on Network and Information Systems for Computers, 2022.
-2) The IOP International Conference on Computer Networks and Communications, 2022.
+<p>1) IEEE Annual International Conference on Network and Information Systems for Computers, 2022.
+<p>2) The IOP International Conference on Computer Networks and Communications, 2022.
   
 </p>
 <div id="footer">
