--- a/index.html
+++ b/index.html
@@ -25,80 +25,55 @@
 <h1>Lei Chu</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="CHU.jpg" alt="alt text" width="244.8px" height="326.4px" />&nbsp;</td>
+<img src="CHU.jpg" alt="alt text" width="428.8px" height="326.4px" />&nbsp;</td>
 <td align="left"><p>Lei Chu <br />
 <br />
-Ph.D. Candidate <br />
+Ph.D. <br />
 <br />
 <a href="https://minghsiehece.usc.edu/" target=&ldquo;blank&rdquo;>Department of Electrical and Computer Engineering</a> <br />
 <a href="https://www.usc.edu/" target=&ldquo;blank&rdquo;>University of Southern California</a> <br />
 <br />
-Office: EEB 518 <br />
+Office: EEB 508 <br />
 Email: lc_285 [AT] usc [dot] edu <br />
 <br />
-<a href="https:\/\/leo-chu.github.io/" target=&ldquo;blank&rdquo;>Homepage</a>, <a href="https://orcid.org/0000-0001-8015-9705" target=&ldquo;blank&rdquo;>ORCID</a>, <a href="https://dblp.org/pid/14/5359-4.html" target=&ldquo;blank&rdquo;>dblp</a>
+<a href="https:\/\/leo-chu.github.io/" target=&ldquo;blank&rdquo;>Homepage</a>, <a href="https://orcid.org/0000-0001-6265-6505" target=&ldquo;blank&rdquo;>ORCID</a>, <a href="https://dblp.org/pid/168/2875.html" target=&ldquo;blank&rdquo;>dblp</a>
 </p>
 </td></tr></table>
 <h2>Welcome</h2>
-<p>I am a Ph.D. candidate in the Department of Electrical Engineering at University of Southern California, affiliated with the
+<p>I am a full-time research scholar in the Department of Electrical Engineering at University of Southern California, affiliated with the
 <a href="https://wides.usc.edu/" target=&ldquo;blank&rdquo;>Wireless Devices and Systems (WiDeS) Group</a>, under the supervision of Professor
 <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;>Andreas F. Molisch</a>.
 Prior to that, I received my M.S. and B.E. degrees from the
-<a href="https://www.ee.tsinghua.edu.cn/en/" target=&ldquo;blank&rdquo;>Department of Electronic Engineering</a>,
-<a href="https://www.tsinghua.edu.cn/en/" target=&ldquo;blank&rdquo;>Tsinghua University</a> in 2018 and 2015, respectively. My advisor was Professor
-<a href="http://oa.ee.tsinghua.edu.cn/~shenyuan/" target=&ldquo;blank&rdquo;>Yuan Shen</a>.
+<a href="https://en.uestc.edu.cn/" target=&ldquo;blank&rdquo;>Department of Electronic Engineering</a>,
+<a href="https://en.sjtu.edu.cn/" target=&ldquo;blank&rdquo;>UESTC and SJTU</a> in 2015 and 2019, respectively. My advisor was Professor
+<a href="https://scholar.google.com/citations?user=FTLNXX8AAAAJ&hl=en;>Robert C. Qiu</a>.
 </p>
 <div class="infoblock">
 <div class="blockcontent">
-<p>My research interests include stochastic network control and optimization, especially in the integration of computing, caching, and communication (3C) technologies into next-generation network design. I am currently working on modeling, analysis, evaluation, and control of next-generation computing networks (e.g., distributed cloud, mobile edge, and fog computing) and services (e.g., autonomous driving, AR/MR/VR/XR, and industrial automation).
+<p>As an interdisciplinary researcher, my research interests include integrating information theory into neural network optimization and the related Wireless Communications and Smart Sensing applications.
 </p>
 </div></div>
 <h2>News</h2>
 <ul>
-<li><p>[04-28-2022] Our paper &lsquo;&lsquo;Ultra-reliable distributed cloud network control with end-to-end latency constraints&rsquo;&rsquo; is accepted by <i>IEEE/ACM Trans. Netw.</i>
-[<a href="https://leo-chu.github.io/BibTex/cai2022delay.bib" target=&ldquo;blank&rdquo;>cite</a>]
-</p>
-</li>
-</ul>
-<ul>
-<li><p>[04-22-2022] Our paper &lsquo;&lsquo;Compute- and data-intensive networks: The key to the Metaverse&rsquo;&rsquo; is accepted to <i>Proc. IEEE Int. Conf. 6G Netw. (6GNet)</i>, 2022
+<li><p>[03-19-2024] Our paper &lsquo;&lsquo;Model-agnostic V2V Channel Prediction with Meta Predictive Recurrent Neural Networks&rsquo;&rsquo; is accepted to <i>IEEE International Conference on Communications</i>, 2024
 [<a href="https://arxiv.org/abs/2204.02001" target=&ldquo;blank&rdquo;>arXiv</a>,
 <a href="https://leo-chu.github.io/BibTex/cai2022metaverse.bib" target=&ldquo;blank&rdquo;>cite</a>]
 </p>
 </li>
 </ul>
 <ul>
-<li><p>[06-17-2021] I gave a presentation at <i>IEEE ICC 2021</i> on delay-sensitive service delivery
+<li><p>[02-26-2024] Our paper &lsquo;&lsquo; Dynamic Inertial Poser (DynaIP): Part-Based Motion Dynamics Learning for Enhanced Human Pose Estimation with Sparse Inertial Sensors&rsquo;&rsquo; is accepted by <i> IEEE / CVF Computer Vision and Pattern Recognition Conference (CVPR)</i>
+[<a href="https://leo-chu.github.io/BibTex/cai2022delay.bib" target=&ldquo;blank&rdquo;>cite</a>]
+</p>
+</li>
+</ul>
+<ul>
+<li><p>[12-8-2022] I gave a THREE hours tutorial presentation at <i>IEEE ICC 2023</i> Scalable, accurate, and privacy preserving localization in B5G Cellular Networks
 [<a href="https://vimeo.com/702739670" target=&ldquo;blank&rdquo;>video</a>, <a href="https://leo-chu.github.io/presentations/cai2021delay.pdf" target=&ldquo;blank&rdquo;>slides</a>]
 </p>
-</li>
-</ul>
-<ul>
-<li><p>[06-16-2021] I gave a presentation at <i>IEEE ICC 2021</i> on multicast service delivery
-[<a href="https://vimeo.com/702739873" target=&ldquo;blank&rdquo;>video</a>, <a href="https://leo-chu.github.io/presentations/cai2021multicast.pdf" target=&ldquo;blank&rdquo;>slides</a>]
-</p>
-</li>
-</ul>
-<ul>
-<li><p>[12-08-2020] I gave a presentation at <i>IEEE GlobeCom 2020</i> on MEC network control
-[<a href="https://vimeo.com/702740973" target=&ldquo;blank&rdquo;>video</a>, <a href="https://leo-chu.github.io/presentations/cai2020mec.pdf" target=&ldquo;blank&rdquo;>slides</a>]
-</p>
-</li>
-</ul>
-<ul>
-<li><p>[12-12-2019] Our paper &lsquo;&lsquo;On the multi-activation oriented design of D2D-aided caching networks&rsquo;&rsquo; is presented at <i>IEEE GlobeCom 2019</i> 
-[<a href="https://leo-chu.github.io/presentations/cai2019multilink.pdf" target=&ldquo;blank&rdquo;>slides</a>]
-</p>
-</li>
-</ul>
-<ul>
-<li><p>[05-21-2018] Our paper &lsquo;&lsquo;Integrated localization and control for accurate multi-agent formation&rsquo;&rsquo; is presented at <i>IEEE ICC 2018</i> [<a href="https://leo-chu.github.io/presentations/cai2018ILC.pdf" target=&ldquo;blank&rdquo;>slides</a>]
-</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2022-06-03 09:54:15 Pacific Daylight Time.
+Last updated on 2024-03-03 09:54:15 Pacific Daylight Time.
 </div>
 </div>
 </td>
