--- a/education.html
+++ b/education.html
@@ -84,7 +84,7 @@ Information Sciences; 20) Digital Signal Processing.
 <h3>Editorial Service:</h3>   
 <p>1) Academic Editor, PLOS ONE (Impact Factor: 3.752), Since Sep. 2023.
 <p>2) Academic Editor, IET Electrical Systems in Transportation (Impact Factor: 2.387), Since Jun. 2023.
-<p>3) Academic Editor, Hindawi Journal of Sensors (Impact Factor: 2.55), Since Jan. 2023.
+<p>3) Academic Editor, Wiley Journal of Sensors (Impact Factor: 2.55), Since Jan. 2023.
 <p>4) Leading Guest Editor for the special issue ”When Mixed Reality Meets Smart Sensing with
 Wearables: The Pursuit for Efficiency, Interpretability, and Trustworthiness” in Applied Sciences;
 <p>5) Associate Editor, Journal of Artificial Intelligence and Big Data, since 2022.
