--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Email: lc_285 [AT] usc [dot] edu <br />
 Prior to that, I received my M.S. and B.E. degrees from the
 <a href="https://en.uestc.edu.cn/" target=&ldquo;blank&rdquo;>Department of Electronic Engineering</a>,
 <a href="https://en.sjtu.edu.cn/" target=&ldquo;blank&rdquo;>UESTC and SJTU</a> in 2015 and 2019, respectively. My advisor was Professor
-<a href="https://scholar.google.com/citations?user=FTLNXX8AAAAJ&hl=en;>Robert C. Qiu</a>.
+<a href="https://scholar.google.com/citations?user=FTLNXX8AAAAJ&hl=en " target=&ldquo;blank&rdquo;>Robert C. Qiu</a>.
 </p>
 <div class="infoblock">
 <div class="blockcontent">
