--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ Email: lc_285 [AT] usc [dot] edu <br />
 </p>
 </td></tr></table>
 <h2>Welcome</h2>
-<p>I am a full-time research scholar in the Department of Electrical Engineering at University of Southern California, affiliated with the
+<p>I am a full-time research scholar in the Department of Electrical Engineering at the University of Southern California, affiliated with the
 <a href="https://wides.usc.edu/" target=&ldquo;blank&rdquo;>Wireless Devices and Systems (WiDeS) Group</a>, under the supervision of Professor
 <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;>Andreas F. Molisch</a>.
-Prior to that, I received my M.S. and B.E. degrees from the
+Prior to that, I received my Ph.D. and M.S. degrees from the
 <a href="https://en.uestc.edu.cn/" target=&ldquo;blank&rdquo;>Department of Electronic Engineering</a>,
 <a href="https://en.sjtu.edu.cn/" target=&ldquo;blank&rdquo;>UESTC and SJTU</a> in 2015 and 2019, respectively. My advisor was Professor
 <a href="https://scholar.google.com/citations?user=FTLNXX8AAAAJ&hl=en " target=&ldquo;blank&rdquo;>Robert C. Qiu</a>.
@@ -68,7 +68,7 @@ Prior to that, I received my M.S. and B.E. degrees from the
 </li>
 </ul>
 <ul>
-<li><p>[12-8-2022] I gave a THREE hours tutorial presentation at <i>IEEE ICC 2023</i> Scalable, accurate, and privacy preserving localization in B5G Cellular Networks
+<li><p>[12-8-2022] Together with Prof. Molisch and Dr. Daoud, I gave an THREE hours tutorial presentation at <i>IEEE ICC 2023</i> Scalable, accurate, and privacy preserving localization in B5G Cellular Networks
 [<a href="https://vimeo.com/702739670" target=&ldquo;blank&rdquo;>video</a>, <a href="https://leo-chu.github.io/presentations/cai2021delay.pdf" target=&ldquo;blank&rdquo;>slides</a>]
 </p>
 <div id="footer">
