--- a/overview.html
+++ b/overview.html
@@ -23,41 +23,29 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Overview</h1>
-</div>
-<p>My research interests include stochastic network control and optimization, especially in the integration of computing, caching, and communication (3C) technologies into next-generation network design. I also built expertise on multi-agent (cooperative) network localization, navigation and control from my previous research experiences.
-</p>
-<h2>Next-Gen Computing Network Control</h2>
-<ul>
-<li><p>Caching Networks
-</p>
-</li>
-</ul>
-<ul>
-<li><p>Processing Networks
-</p>
-</li>
-</ul>
-<ul>
-<li><p>Joint Computing, Caching, and Communication (3C)
-</p>
-</li>
-</ul>
-<h2>Next-Gen Computing Service Control</h2>
-<ul>
-<li><p>Delay Sensitive Services
-</p>
-</li>
-</ul>
-<ul>
-<li><p>Mixed Cast Services
-</p>
-</li>
-</ul>
-<ul>
-<li><p>Data Intensive Services
-</p>
-</li>
-</ul>
+As an interdisciplinary researcher, my research interests include integrating information theory into neural network optimization and the related Wireless Communications and Smart Sensing applications. 
+
+<h2>1) Machine Learning(ML):</h2>  First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
+Network (NN); Random Matrix Theory; Theoretical NN Generalization Evaluation. 
+
+<p>Example Work I:</p>
+<p>Example Work II:</p>
+<p>Example Work III:</p>
+  
+<h2>2) ML for Communications and Sensing: </h2>  Semantic Localization; Directional Spectrum Sensing; 1-bit Massive MIMO;
+V2V Propagation Modeling; Channel Estimation/Prediction; V2V Resource Allocation; Joint Communication and Sensing. 
+
+<p>Example Work I:</p>
+<p>Example Work II:</p>
+<p>Example Work III:</p>
+  
+<h2>3) ML for Sciences: </h2>  Activity Recognition/Reconstruction with Wearables/Radar/WIFI; Intelligent Sensing with
+PMU, IMU, Electroencephalogram (EEG) and Point Clouds.
+
+<p>Example Work I:</p>
+<p>Example Work II:</p>
+<p>Example Work III:</p>
+  
 <div id="footer">
 <div id="footer-text">
 Last updated on 2022-04-23 23:34:26 Pacific Daylight Time.
