--- a/education.html
+++ b/education.html
@@ -68,7 +68,7 @@ Information Sciences; 20) Digital Signal Processing.
 <p>  I served as a conference reviewer for top-tier venues:
 <p>1) IEEE/RSJ International Conference on Intelligent Robots and Systems (IEEE-IROS), since 2022;
 <p>2) IEEE International Conference on Image Processing (IEEE-ICIP), since 2022.
-<p>3) The Annual International Conference of the IEEE Engineering in Medicine and Biology Society (IEEEEMBC), since 2024.
+<p>3) The Annual International Conference of the IEEE Engineering in Medicine and Biology Society (IEEE-EMBC), since 2024.
 
 <h3>Editorial Service:</h3>   
 <p>1) Academic Editor, PLOS ONE (Impact Factor: 3.752), Since Sep. 2023.
