--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Email: lc_285 [AT] usc [dot] edu <br />
 <p>I am a full-time research scholar in the Department of Electrical Engineering at the University of Southern California, affiliated with the
 <a href="https://wides.usc.edu/" target=&ldquo;blank&rdquo;>Wireless Devices and Systems (WiDeS) Group</a>, under the supervision of Professor
 <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;>Andreas F. Molisch</a>.
-Prior to that, I received my Ph.D. and M.S. degrees from the
+Prior to that, I received my M.S.  and Ph.D. degrees from the
 <a href="https://en.uestc.edu.cn/" target=&ldquo;blank&rdquo;>Department of Electronic Engineering</a>,
 <a href="https://en.sjtu.edu.cn/" target=&ldquo;blank&rdquo;>UESTC and SJTU</a> in 2015 and 2019, respectively. My advisor was Professor
 <a href="https://scholar.google.com/citations?user=FTLNXX8AAAAJ&hl=en " target=&ldquo;blank&rdquo;>Robert C. Qiu</a>.
