--- a/education.html
+++ b/education.html
@@ -27,12 +27,14 @@
 <h2>Education</h2>
 <ul>
 <li><p> Ph.D, School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University (SJTU), Jul. 2015 - Dec. 2019.
+<li><p> Thesis:  High-dimensional Data Analysis in Massive MIMO Systems with Random Matrix Theory (In English); Thesis Advisor: Robert C. Qiu.
 </p>
 </li>
 </ul>
 <ul>
 <li><p> M.S., School of Information and Communication Engineering, University of Electronic Science and Technology of China (UESTC), Chengdu, China, Sep. 2012 - Jun. 2015
-</p>
+<li><p> Thesis:  Research on Robust Indoor Localization Algorithms Using Low Rank Matrix Completion (In Chinese); Thesis Advisor: Xiansheng Guo.
+</p> 
 </li>
 </ul>
 
@@ -69,6 +71,7 @@ Information Sciences; 20) Digital Signal Processing.
 <p>1) IEEE/RSJ International Conference on Intelligent Robots and Systems (IEEE-IROS), since 2022;
 <p>2) IEEE International Conference on Image Processing (IEEE-ICIP), since 2022.
 <p>3) The Annual International Conference of the IEEE Engineering in Medicine and Biology Society (IEEE-EMBC), since 2024.
+<p>4) IEEE International Conference on Communications (IEEE-ICC), since 2024.
 
 <h3>Editorial Service:</h3>   
 <p>1) Academic Editor, PLOS ONE (Impact Factor: 3.752), Since Sep. 2023.
