--- a/education.html
+++ b/education.html
@@ -23,6 +23,32 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>About Me</h1>
+
+</div>
+<h2>Working Experience</h2>
+<ul>
+<li><p> Postdoctoral Researcher, WiDeS, University of South Carolina (USC), Since Feb. 2021- now.
+<li><p> Research Topic:  Propagation Statistics Guided Machine Learning (PSG-ML) for Wireless Communications and Intelligent Sensing; Supervisor: <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;>Prof. Andreas F. Molisch.</a> <br /> 
+</p>
+</li>
+</ul>
+<ul>
+<ul>
+<li><p> Senior Research Staff, School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University (SJTU), Jan. 2020 - Sep. 2021.
+<li><p> Research Topic: Integrating Information Theory into Machine Learning for Enhanced Communication and Sensing in 5G and Beyond Networks; Collaborator: <a href="https://scholar.google.com/citations?user=Vm7d2EkAAAAJ&hl=en" target=&ldquo;blank&rdquo;> Prof. Ling Pei </a> <br /> .
+</p>
+</li>
+</ul>
+<ul>
+<ul>
+<li><p> Visting Researcher, University of Tennessee, Knoxville, Mar. 2019 - Sep. 2019.
+<li><p> Research Topic:  Understanding the Role of Unlabeled Data in Deep Learning with Information Theory; Supervisor: <a href="https://engineering.purdue.edu/AAE/people/ptProfile?resource_id=270776" target=&ldquo;blank&rdquo;> Prof. Husheng Li. </a> <br /> 
+</p>
+</li>
+</ul>
+<ul>
+
+  
 </div>
 <h2>Education</h2>
 <ul>
