--- a/education.html
+++ b/education.html
@@ -40,7 +40,7 @@
 </ul>
 <ul>
 <li><p> Visting Researcher, University of Tennessee, Knoxville, Mar. 2019 - Sep. 2019.
-<li><p> Research Topic:  Understanding the Role of Unlabeled Data in Deep Learning with Information Theory; Supervisor: <a href="https://engineering.purdue.edu/AAE/people/ptProfile?resource_id=270776" target=&ldquo;blank&rdquo;> Prof. Husheng Li. </a> <br /> 
+<li><p> Research Topic:  Understanding the Role of Unlabeled Data in Deep Learning with Information Theory; Supervisor: <a href="https://engineering.purdue.edu/AAE/people/ptProfile?resource_id=270776" target=&ldquo;blank&rdquo;> Prof. Husheng Li </a> <br /> 
 </p>
 </li>
 </ul>
