--- a/course.html
+++ b/course.html
@@ -16,7 +16,7 @@
 <div class="menu-item"><a href="education.html">About&nbsp;Me</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="overview.html">Overview</a></div>
-<div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="publication.html">Projects</a></div>
 <div class="menu-category">Courseworks</div>
 <div class="menu-item"><a href="course.html" class="current">Courses</a></div>
 </td>
@@ -26,40 +26,40 @@
 </div>
 <h2>EE Courses</h2>
 <ul>
-<li><p>Stochastic Network Optimization (EE 649)
+<li><p>Stochastic Network Optimization 
 </p>
 </li>
-<li><p>Stochastic Systems and Reinforcement Learning (EE 556)
+<li><p>Elements of Random Matrix Theory and its Applications on Big Data
 </p>
 </li>
-<li><p>Optimization for the Information and Data Sciences (EE 588)
+<li><p> Convex Optimization 
 </p>
 </li>
-<li><p>Statistics and Data Analysis (EE 517)
+<li><p>Statistics and Data Analysis 
 </p>
 </li>
-<li><p>Random Processes (EE 562)
+<li><p>Random Processes  
 </p>
 </li>
 </ul>
 <h2>CS Courses</h2>
 <ul>
-<li><p>Analysis of Algorithms (CSCI 570)
+<li><p>Analysis of Algorithms  
 </p>
 </li>
-<li><p>Machine Learning (CSCI 567)  
+<li><p>Deep Learning  
 </p>
 </li>
 </ul>
 <h2>ISE Courses</h2>
 <ul>
-<li><p>Foundations of Optimization (ISE 630)
+<li><p>Foundations of Optimization 
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2022-04-24 13:35:44 Pacific Daylight Time.
+Last updated on 2024-05-24  Pacific Daylight Time.
 </div>
 </div>
 </td>
