--- a/overview.html
+++ b/overview.html
@@ -16,7 +16,7 @@
 <div class="menu-item"><a href="education.html">About&nbsp;Me</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="overview.html" class="current">Overview</a></div>
-<div class="menu-item"><a href="publication.html">Publications</a></div>
+<div class="menu-item"><a href="publication.html">Projects</a></div>
 <div class="menu-category">Courseworks</div>
 <div class="menu-item"><a href="course.html">Courses</a></div>
 </td>
