--- a/publication.html
+++ b/publication.html
@@ -24,10 +24,10 @@
 <div id="toptitle">
 <h1>Publications</h1>
 </div>
-<p>The full list of my publications can be found in
+<p>The full list of my Publications/Projects can be found in
 <a href="https://scholar.google.com/scholar?hl=en&as_sdt=4007&q=lei+chu&oq=" target=&ldquo;blank&rdquo;>Google Scholar</a>.
 </p>
-<h2>Under Review</h2>
+<h2>Under Going</h2>
 <ol>
 <li><p>
 <u> SWIFT: Opportunistic mm-Wave Receivers <i>Jan. 2023 - Dec. 2025</i>.
@@ -39,7 +39,6 @@
 </p>
 </li> 
 <li><p>
-<li><p>
 <u> Intelligent V2V Communications: Technology for Improved Mobilit <i>Jun. 2023 - Jun. 2024</i>.
 <u> Supported by California METRANS Transportation Center
 <u> Role in Project: Key Researcher
@@ -49,7 +48,7 @@
 </li>
 <li><p>
 
-<li><p>
+<h2>Finished</h2>
 <u> Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
 <u> Supported by  KACST, Saudi
 <u> Role in Project: Key Researcher
@@ -58,20 +57,12 @@
 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers
 </li>
 <li><p>
-
-  <li><p>
 <u> ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>.
 <u> Supported by  Supported by Shanghai Engineering Research Center
 <u> Role in Project: Principal Investigator
 <u> Details:  1) Integration of Information theory with efficient representation learning algorithms.
 2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction;
-3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.
-</li>
-<li><p>
-
-
-
-  
+3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.  
 </li>
 </ol>
 <div id="footer">
