--- a/publication.html
+++ b/publication.html
@@ -22,7 +22,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Publications</h1>
+<h1>Publications and Projects</h1>
 </div>
 <p>The full list of my Publications/Projects can be found in
 <a href="https://scholar.google.com/scholar?hl=en&as_sdt=4007&q=lei+chu&oq=" target=&ldquo;blank&rdquo;>Google Scholar</a>.
@@ -30,37 +30,37 @@
 <h2>Under Going</h2>
 <ol>
 <li><p>
-<u> SWIFT: Opportunistic mm-Wave Receivers <i>Jan. 2023 - Dec. 2025</i>.
-<u>Supported by The U.S. National Science Foundation Role 
-<u> Role in Project: Key Researcher
-<u> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks;
+SWIFT: Opportunistic mm-Wave Receivers <i>Jan. 2023 - Dec. 2025</i>.
+Supported by The U.S. National Science Foundation Role 
+Role in Project: Key Researcher
+Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks;
 2) Dataset Construction with Remcom Wireless Insite;
 3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Diffusion model)</u>
 </p>
 </li> 
 <li><p>
-<u> Intelligent V2V Communications: Technology for Improved Mobilit <i>Jun. 2023 - Jun. 2024</i>.
-<u> Supported by California METRANS Transportation Center
-<u> Role in Project: Key Researcher
-<u> Details:  1)ata preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;)
+Intelligent V2V Communications: Technology for Improved Mobilit <i>Jun. 2023 - Jun. 2024</i>.
+Supported by California METRANS Transportation Center
+Role in Project: Key Researcher
+Details:  1)ata preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;)
 2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries;
 3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation
 </li>
 <li><p>
 
 <h2>Finished</h2>
-<u> Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
-<u> Supported by  KACST, Saudi
-<u> Role in Project: Key Researcher
-<u> Details:  1) Introduction of Semantic Localization Scheme to the literature;
+Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
+Supported by  KACST, Saudi
+Role in Project: Key Researcher
+Details:  1) Introduction of Semantic Localization Scheme to the literature;
 2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms;
 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers
 </li>
 <li><p>
-<u> ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>.
-<u> Supported by  Supported by Shanghai Engineering Research Center
-<u> Role in Project: Principal Investigator
-<u> Details:  1) Integration of Information theory with efficient representation learning algorithms.
+ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>.
+Supported by  Shanghai Engineering Research Center
+Role in Project: Principal Investigator
+Details:  1) Integration of Information theory with efficient representation learning algorithms.
 2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction;
 3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.  
 </li>
