--- a/publication.html
+++ b/publication.html
@@ -25,7 +25,7 @@
 <h1>Publications and Projects</h1>
 </div>
 <p>The full list of my Publications/Projects can be found in
-<a href="https://scholar.google.com/scholar?hl=en&as_sdt=4007&q=lei+chu&oq=" target=&ldquo;blank&rdquo;>Google Scholar</a>.
+<a href="https://scholar.google.com/citations?user=HgZ0wNwAAAAJ&hl=en&oi=ao" target=&ldquo;blank&rdquo;>Google Scholar</a>.
 </p>
 <h2>Under Going</h2>
 <ol>
