--- a/publication.html
+++ b/publication.html
@@ -33,39 +33,33 @@
 SWIFT: Opportunistic mm-Wave Receivers <i>Jan. 2023 - Dec. 2025</i>.
 Supported by The U.S. National Science Foundation Role 
 Role in Project: Key Researcher
-Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks;
+<li> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks;
 2) Dataset Construction with Remcom Wireless Insite;
 3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Diffusion model)</u>
 </p>
 </li> 
-<li><p>
-<li>Intelligent V2V Communications: Technology for Improved Mobility <i>Jun. 2023 - Jun. 2024</i>.
-<li>Supported by California METRANS Transportation Center
-<li>Role in Project: Key Researcher
+<li><p> Intelligent V2V Communications: Technology for Improved Mobility <i>Jun. 2023 - Jun. 2024</i>.
+ Supported by California METRANS Transportation Center
+ Role in Project: Key Researcher
 <li>Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;)
-<li>2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries;
-<li>3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation
+ 2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries;
+ 3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation
 </li>
 <li><p>
-
-</p>
 <h2>Done</h2>
 <ol>
-<li><p>  
-<li>Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
-<li>Supported by  KACST, Saudi
-<li>Role in Project: Key Researcher
+<li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
+ Supported by  KACST, Saudi
+ Role in Project: Key Researcher
 <li>Details:  1) Introduction of Semantic Localization Scheme to the literature;
-<li>2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms;
-<li>3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers
-</li>
-<li><p>
-<li>ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>.
-<li>Supported by  Shanghai Engineering Research Center
-<li>Role in Project: Principal Investigator
+ 2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms;
+ 3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers
+<li><p> ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>.
+ Supported by  Shanghai Engineering Research Center
+ Role in Project: Principal Investigator
 <li>Details:  1) Integration of Information theory with efficient representation learning algorithms.
-<li>2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction;
-<li>3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.  
+ 2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction;
+ 3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.  
 </li>
 </ol>
 <div id="footer">
