--- a/publication.html
+++ b/publication.html
@@ -41,23 +41,24 @@ Role in Project: Key Researcher
 <li><p> Intelligent V2V Communications: Technology for Improved Mobility <i>Jun. 2023 - Jun. 2024</i>.
  Supported by California METRANS Transportation Center
  Role in Project: Key Researcher
-<li>Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;)
+</p>
+Details:  1)Data preprocessing for the data collected in scenarios (truck-to-truck, car-to-car, and car-to-car with trucks;)
  2) Implementation of Predictive learning algorithms for Accurate V2V channel prediction in different geometries;
  3) Introducing Meta-learning for Model-agnostic channel prediction and resource allocation
 </li>
-<p>
+
 <h2>Done</h2>
 <ol>
 <li><p>  Propagation Physic-informed  for Scalable and Privacy-preserving Localization in B5G Networks <i>Mar. 2021 - Mar. 2023</i>.
  Supported by  KACST, Saudi
  Role in Project: Key Researcher
-<li>Details:  1) Introduction of Semantic Localization Scheme to the literature;
+</p> Details:  1) Introduction of Semantic Localization Scheme to the literature;
  2) Deep Domain Adaptation based Transfer Learning for Enhanced Localization Algorithms;
  3) Experimental verification over CSI Measurements campaign with 28GHz channel sounder and WIFI receivers
 <li><p> ML for Joint Communication and Sensing in B5G Systems <i>Jun. 2020 - Jun. 2022</i>.
  Supported by  Shanghai Engineering Research Center
  Role in Project: Principal Investigator
-<li>Details:  1) Integration of Information theory with efficient representation learning algorithms.
+</p> Details:  1) Integration of Information theory with efficient representation learning algorithms.
  2) Application of new ML algorithms for joint channel modeling and UE activity recognition/reconstruction;
  3) Implement Meta ML for Intelligent Sensing, including the setting of few-labeled data and limited memory budget.  
 </li>
