--- a/publication.html
+++ b/publication.html
@@ -33,7 +33,7 @@
 SWIFT: Opportunistic mm-Wave Receivers <i>Jan. 2023 - Dec. 2025</i>.
 Supported by The U.S. National Science Foundation Role 
 Role in Project: Key Researcher
-<li> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks;
+</p> Details: 1) Initialization of Directional Spectrum Sensing (DSS) scheme for mmWave Networks;
 2) Dataset Construction with Remcom Wireless Insite;
 3) Introduction of Propagation Physic-informed ML for sensing and conditional data generation (Diffusion model)</u>
 </p>
