--- a/overview.html
+++ b/overview.html
@@ -23,15 +23,15 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Overview</h1>
-As an interdisciplinary researcher, my research interests include integrating information theory into neural network optimization and the related Wireless Communications and Smart Sensing applications. 
+As an interdisciplinary researcher, my research interests include integrating statistics into neural network optimization and related applications in time series. 
 
 <h2>1) Machine Learning(ML):</h2>  First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
 Network (NN); Random Matrix Theory; Theoretical NN Generalization Evaluation. 
 
    <p>
-<p>Example Work I:  Exploiting information theory criterion for deep domain adaptation: unified framework and convergence analysis. Under review. </p> 
- <p>Example Work I:    Meta-PredRNN: Addressing the Course of Accumulative Prediction Error. Under review. </p> 
-<p>Example Work III:  Unlocking Semantic Localization: The Synergy of Classification and Regression in Deep Contextual Learning. Under review. </p> 
+<p>Example Work I:  Leveraging Information Theory Criteria for Deep Domain Adaptation: A Unified Framework and Convergence Analysis. Under review. </p> 
+ <p>Example Work I: Prediction in Prediction: Addressing the Course of Accumulative Prediction Error. Under review. </p> 
+<p>Example Work III: Conditional Diffusion for Updating Signal-to-Interference Ratio Mapping. Under review. </p> 
   
 <h2>2) PSG-ML for Communications and Sensing: </h2>  Semantic Localization; Directional Spectrum Sensing; 1-bit Massive MIMO;
 V2V Propagation Modeling; Channel Estimation/Prediction; V2V Resource Allocation; Joint Communication and Sensing. 
