--- a/overview.html
+++ b/overview.html
@@ -23,7 +23,7 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Overview</h1>
-As an interdisciplinary researcher, my research interests include integrating statistics into neural network optimization and related applications in time series. 
+As an interdisciplinary researcher, my research interests include integrating statistics into neural network optimization and related applications in time series: the Tasks of generation, prediction, and abnormality detection. 
 
 <h2>1) Machine Learning(ML):</h2>  First-order Optimization; Convergence Analysis; Domain Adaptation; Predictive Learning; Transformers; Information Theory guided Representation Learning; Physic-inspired Neural
 Network (NN); Random Matrix Theory; Theoretical NN Generalization Evaluation. 
