--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Prior to that, I received my M.S.  and Ph.D. degrees from the
 </p>
 <div class="infoblock">
 <div class="blockcontent">
-<p>As an interdisciplinary researcher, my research interests include integrating information theory into neural network optimization and the related Wireless Communications and Smart Sensing applications.
+<p>As an interdisciplinary researcher, my research interests include integrating data physics into neural network optimization and the related Wireless Communications and Smart Sensing applications (the tasks of generation, prediction, and abnormality detection).
 </p>
 </div></div>
 <h2>News</h2>
