--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Prior to that, I received my M.S.  and Ph.D. degrees from the
 </p>
 <div class="infoblock">
 <div class="blockcontent">
-<p>As an interdisciplinary researcher, my research interests include integrating data physics into neural network optimization and the related Wireless Communications and Smart Sensing applications (In the computer science domain, it is related to the tasks of time series generation, prediction, and abnormality detection).
+<p>As an interdisciplinary researcher, my research interests include integrating data physics into neural network optimization and the related Wireless Communications and Smart Sensing applications (In the computer science domain, it is related to the tasks of time series generation, prediction, and anomaly detection).
 </p>
 </div></div>
 <h2>News</h2>
@@ -68,7 +68,7 @@ Prior to that, I received my M.S.  and Ph.D. degrees from the
 </li>
 </ul>
 <ul>
-<li><p>[12-8-2022] Together with Prof. Molisch and Dr. Daoud, I gave an THREE hours tutorial presentation at <i>IEEE ICC 2023</i> Scalable, accurate, and privacy preserving localization in B5G Cellular Networks
+<li><p>[12-8-2022] Together with Prof. Molisch and Dr. Daoud, I gave a THREE hours tutorial presentation at <i>IEEE ICC 2023</i> Scalable, accurate, and privacy-preserving localization in B5G Cellular Networks
 [<a href="https://vimeo.com/702739670" target=&ldquo;blank&rdquo;>video</a>, <a href="https://leo-chu.github.io/presentations/cai2021delay.pdf" target=&ldquo;blank&rdquo;>slides</a>]
 </p>
 <div id="footer">
