--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
 <h2>Working Experience</h2>
 <ul>
 <li><p> Postdoctoral Researcher, WiDeS, University of South Carolina (USC), Since Feb. 2021- now.
-<li><p> Research Topic:  Propagation Statistics Guided Machine Learning (PSG-ML) for Wireless Communications and Intelligent Sensing; Supervisor: <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;> Prof. Andreas F. Molisch </a> <br /> 
+<li><p> Research Topic:  <strong> Propagation Statistics Guided Machine Learning (PSG-ML) <strong> for Wireless Communications and Intelligent Sensing; Supervisor: <a href="https://wides.usc.edu/founder.html" target=&ldquo;blank&rdquo;> Prof. Andreas F. Molisch </a> <br /> 
 </p>
 </li>
 </ul>
@@ -68,7 +68,7 @@
 <p> He authored over fifty papers, holds several patents, and contributed to three book chapters. He regularly reviews technical papers, completing 100+ peer reviews for 20+ SCI-indexed journals, including 10+ IEEE Transactions. He received the 2015 Distinguished Master's Thesis Award, the 2020 SJTU Doctoral Excellence Award, and a 2020 International Postdoctoral Fellowship. He serves a TPC member for several conferences and an academic/associate editor for three SCI-indexed journals. He presented a tutorial at IEEE GLOBECOM 2022 and emphasizes reproducible research by sharing his code with the public.
 
 <h3>Memberships</h3>  
-<p>IEEE Senior Member, since 2022;
+<p>IEEE <strong>Senior Member<strong>, since 2022;
 <p>IEEE Communication Society Membership;
 <p>IEEE Vehicular Technology Society Membership;
 <p>IEEE Computer Society Technical Community on Learning Technology;
@@ -80,7 +80,7 @@ Healthcare Innovations.
   
 <h3>Review Service:</h3> 
   
-I serve(d) as a regular reviewer with 200+ reviews for below 20+ referred international journals:
+I serve(d) as a regular reviewer with <strong>200+ reviews<strong> for below 20+ referred international journals:
 <p> 0) IEEE Transactions on Signal Processing; 1) IEEE Transactions on Wireless Communication; 2) IEEE
 Transactions on Artificial Intelligence; 3) IEEE Wireless Communications Magazine; 4) IEEE Transactions
 on Big Data; 5) IEEE Transactions on Multimedia; 6) IEEE Transactions on Communications; 7) IEEE
@@ -97,14 +97,15 @@ Information Sciences; 20) Digital Signal Processing.
 <p>3) The Annual International Conference of the IEEE Engineering in Medicine and Biology Society (IEEE-EMBC), since 2024.
 <p>4) IEEE International Conference on Communications (IEEE-ICC), since 2024.
 
-<h3>Editorial Service:</h3>   
-<p>1) Academic Editor, PLOS ONE (Impact Factor: 3.752), Since Sep. 2023.
-<p>2) Academic Editor, IET Electrical Systems in Transportation (Impact Factor: 2.387), Since Jun. 2023.
-<p>3) Academic Editor, Wiley Journal of Sensors (Impact Factor: 2.55), Since Jan. 2023.
-<p>4) Leading Guest Editor for the special issue ”When Mixed Reality Meets Smart Sensing with
+<h3>Editorial Service:</h3>  
+<p>1) Associate Editor, <strong> IEEE Open Journal of Vehicular Technology (Impact Factor: 6.4)<strong>, Since Oct. 2024.
+<p>3) Associate Editor, <strong> IET Electrical Systems in Transportation (Impact Factor: 2.387)<strong>, Since Jun. 2023.
+<p>2) Academic Editor, <strong> PLOS ONE (Impact Factor: 3.752)<strong>, Since Sep. 2023.
+<p>4) Academic Editor, <strong> Wiley Journal of Sensors (Impact Factor: 2.55) <strong>, Since Jan. 2023.
+<p>5) Leading Guest Editor for the special issue ”When Mixed Reality Meets Smart Sensing with
 Wearables: The Pursuit for Efficiency, Interpretability, and Trustworthiness” in Applied Sciences;
-<p>5) Associate Editor, Journal of Artificial Intelligence and Big Data, since 2022.
-<p>6) Editorial Board Member, Modern Intelligent Times (MIT, 2957-7942), Sep.2022-Aug.2024.
+<p>6) Associate Editor, <strong> Journal of Artificial Intelligence and Big Data <strong>, since 2022.
+<p>7) Editorial Board Member, <strong> Modern Intelligent Times (MIT, 2957-7942)<strong>, Sep.2022-Aug.2024.
 
 <p> Technical Program Committee for the peer-reviewed conferences:
 <p>1) IEEE Annual International Conference on Network and Information Systems for Computers, 2022.
