--- a/course.html
+++ b/course.html
@@ -57,6 +57,25 @@
 </p>
 </li>
 </ul>
+
+<h1>Teaching (As a TA)</h1>
+</div>
+<h2>EE and CS Courses</h2>
+<ul>
+<li><p>Fundamentals of Random Matrix Theory and Applications in Smart Grid Big Data
+</p>
+</li>
+<h2>Planning Courses</h2>
+<ul>
+<li><p> Advanced Deep Learning with Information Theory: Essentials and Applications
+</p>
+</li>
+</ul>
+<ul>
+<li><p> Intelligent Sensing And Perception with AI: Fundamentals and Applications
+</p>
+</li>
+</ul> 
 <div id="footer">
 <div id="footer-text">
 Last updated on 2024-05-24  Pacific Daylight Time.
